@@ -1,3 +1,9 @@
+2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libstetic/editor/ActionMenuBar.cs, libstetic/editor/ActionMenu.cs:
+	  When a menu bar loses the focus, reset the menu item selection
+	  before hiding the submenus. Fixes bug #81761.
+
 2007-05-23  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libstetic/editor/StockIconSelectorItem.cs,
